# poetry-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml  scripts.py
